--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,10 @@
 {
-  "rewrites": [
-    {
-        "source": "/(.*)",
-        "destination": "/api/index"
-    }
+  "routes": [
+    {"src": "/(.*)", "dest": "api/index.py"}
   ],
   "functions": {
-    "api/index.py": {
-      "maxDuration": 60
+      "api/index.py": {
+        "maxDuration": 30
     }
-  }  
+  }
 }
